- Added an ability to send the reactions and stickers through the stagehand instead of to people around you
- Disabled "Reply" option for whisper messages, to not confuse it with the DMs
- Allowed to have an array of sounds for ping and notifications
- The emote counter will be blue if you have reacted with this emoji